# docs/swagger.yaml
@@ -397,6 +397,37 @@ paths:
       summary: Get all encrypted files
       tags:
       - File
+  /file/:filename:
+    get:
+      description: Provide the file data
+      parameters:
+      - description: Bearer JWT token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.ShowFileResponse'
+        "400":
+          description: bad_request
+          schema:
+            type: string
+        "404":
+          description: not_found
+          schema:
+            type: string
+        "500":
+          description: internal_server_error
+          schema:
+            type: string
+      summary: Find file by name
+      tags:
+      - File
   /file/{arquivo}:
     delete:
       description: deletes a file
@@ -428,46 +459,15 @@ paths:
       summary: Delete file
       tags:
       - File
-  /file/by_name:
-    get:
-      description: Provide the file data
-      parameters:
-      - description: filename to find
-        in: query
-        name: filename
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/schemas.ShowFileResponse'
-        "400":
-          description: bad_request
-          schema:
-            type: string
-        "404":
-          description: not_found
-          schema:
-            type: string
-        "500":
-          description: internal_server_error
-          schema:
-            type: string
-      summary: Find file by name
-      tags:
-      - File
-  /file/by_username:
+  /file/by_username/:username:
     get:
       consumes:
       - application/json
       description: Get a list of encrypted files by username
       parameters:
-      - description: Username
-        in: query
-        name: username
+      - description: Bearer JWT token
+        in: header
+        name: Authorization
         required: true
         type: string
       produces:
@@ -679,9 +679,9 @@ paths:
     get:
       description: Provide the user data
       parameters:
-      - description: User`s username to find
-        in: query
-        name: username
+      - description: Bearer JWT token
+        in: header
+        name: Authorization
         required: true
         type: string
       produces:
